--- a/SistemAgendamento/frontend/package.json
+++ b/SistemAgendamento/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -19,7 +22,8 @@
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-toastify": "^9.0.7",
-    "sass": "^1.54.1"
+    "sass": "^1.54.1",
+    "semantic-ui-react": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
