--- a/SistemAgendamento/frontend/package.json
+++ b/SistemAgendamento/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-modal": "^3.15.1",
     "react-toastify": "^9.0.7",
     "sass": "^1.54.1",
