--- a/SistemAgendamento/frontend/package.json
+++ b/SistemAgendamento/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/moment": "^2.15.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.7",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
